; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/agp/extr_agp_apple.c_agp_apple_flush_tlb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/agp/extr_agp_apple.c_agp_apple_flush_tlb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.agp_apple_softc = type { i64, i64 }

@UNIN_AGP_GART_ENABLE = common dso_local global i32 0, align 4
@UNIN_AGP_U3_GART_PERFRD = common dso_local global i32 0, align 4
@UNIN_AGP_GART_CONTROL = common dso_local global i32 0, align 4
@UNIN_AGP_GART_INVAL = common dso_local global i32 0, align 4
@UNIN_AGP_GART_2XRESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @agp_apple_flush_tlb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @agp_apple_flush_tlb(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.agp_apple_softc*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.agp_apple_softc* @device_get_softc(i32 %5)
  store %struct.agp_apple_softc* %6, %struct.agp_apple_softc** %3, align 8
  %7 = load i32, i32* @UNIN_AGP_GART_ENABLE, align 4
  store i32 %7, i32* %4, align 4
  %8 = load %struct.agp_apple_softc*, %struct.agp_apple_softc** %3, align 8
  %9 = getelementptr inbounds %struct.agp_apple_softc, %struct.agp_apple_softc* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i32, i32* @UNIN_AGP_U3_GART_PERFRD, align 4
  %14 = load i32, i32* %4, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %4, align 4
  br label %16

16:                                               ; preds = %12, %1
  %17 = load i32, i32* %2, align 4
  %18 = load i32, i32* @UNIN_AGP_GART_CONTROL, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @UNIN_AGP_GART_INVAL, align 4
  %21 = or i32 %19, %20
  %22 = call i32 @pci_write_config(i32 %17, i32 %18, i32 %21, i32 4)
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @UNIN_AGP_GART_CONTROL, align 4
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @pci_write_config(i32 %23, i32 %24, i32 %25, i32 4)
  %27 = load %struct.agp_apple_softc*, %struct.agp_apple_softc** %3, align 8
  %28 = getelementptr inbounds %struct.agp_apple_softc, %struct.agp_apple_softc* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %42

31:                                               ; preds = %16
  %32 = load i32, i32* %2, align 4
  %33 = load i32, i32* @UNIN_AGP_GART_CONTROL, align 4
  %34 = load i32, i32* %4, align 4
  %35 = load i32, i32* @UNIN_AGP_GART_2XRESET, align 4
  %36 = or i32 %34, %35
  %37 = call i32 @pci_write_config(i32 %32, i32 %33, i32 %36, i32 4)
  %38 = load i32, i32* %2, align 4
  %39 = load i32, i32* @UNIN_AGP_GART_CONTROL, align 4
  %40 = load i32, i32* %4, align 4
  %41 = call i32 @pci_write_config(i32 %38, i32 %39, i32 %40, i32 4)
  br label %42

42:                                               ; preds = %31, %16
  ret void
}

declare dso_local %struct.agp_apple_softc* @device_get_softc(i32) #1

declare dso_local i32 @pci_write_config(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
